rustdocs/errors/rust-bitcoin-bitcoin-src-crypto-ecdsa.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:7:5
  |
7 | use core::borrow::Borrow;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:8:5
  |
8 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:9:5
  |
9 | use core::ops::Deref;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:10:5
   |
10 | use core::str::FromStr;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:11:5
   |
11 | use core::{fmt, iter};
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `hex`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:15:5
   |
15 | use hex::FromHex;
   |     ^^^ use of unresolved module or unlinked crate `hex`
   |
help: you might be missing a crate named `hex`, add it to your project and import it in your code
   |
 7 + extern crate hex;
   |

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:16:5
   |
16 | use internals::{impl_to_hex_from_lower_hex, write_err};
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 7 + extern crate internals;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:17:5
   |
17 | use io::Write;
   |     ^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::io`

error[E0432]: unresolved import `crate::prelude`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:19:12
   |
19 | use crate::prelude::{DisplayHex, Vec};
   |            ^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `crate::script`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:21:12
   |
21 | use crate::script::ScriptPubKeyBufExt as _;
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
 7 + extern crate script;
   |

error[E0432]: unresolved import `crate::sighash`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:22:12
   |
22 | use crate::sighash::{EcdsaSighashType, NonStandardSighashTypeError};
   |            ^^^^^^^ use of unresolved module or unlinked crate `sighash`
   |
help: you might be missing a crate named `sighash`, add it to your project and import it in your code
   |
 7 + extern crate sighash;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:31:20
   |
31 |     pub signature: secp256k1::ecdsa::Signature,
   |                    ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
   |
   = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:38:35
   |
38 |     pub fn sighash_all(signature: secp256k1::ecdsa::Signature) -> Self {
   |                                   ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
   |
   = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:77:88
   |
77 | ...sult<(), io::Error> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
77 -     pub fn serialize_to_writer<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), io::Error> {
77 +     pub fn serialize_to_writer<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), i8::Error> {
   |
help: consider importing this module
   |
 7 + use std::io;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:138:77
    |
138 | ...sult<(), io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
138 -     pub fn write_to<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), io::Error> {
138 +     pub fn write_to<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), i8::Error> {
    |
help: consider importing this module
    |
  7 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
   --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:244:15
    |
244 |     Secp256k1(secp256k1::Error),
    |               ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
    |
    = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
   --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:272:11
    |
272 | impl From<secp256k1::Error> for DecodeError {
    |           ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
    |
    = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
   --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:273:16
    |
273 |     fn from(e: secp256k1::Error) -> Self { Self::Secp256k1(e) }
    |                ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
    |
    = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:285:9
    |
285 |     Hex(hex::HexToBytesError),
    |         ^^^ use of unresolved module or unlinked crate `hex`
    |
    = help: you might be missing a crate named `hex`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:313:11
    |
313 | impl From<hex::HexToBytesError> for ParseSignatureError {
    |           ^^^ use of unresolved module or unlinked crate `hex`
    |
    = help: you might be missing a crate named `hex`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/bitcoin/src/crypto/ecdsa.rs:314:16
    |
314 |     fn from(e: hex::HexToBytesError) -> Self { Self::Hex(e) }
    |                ^^^ use of unresolved module or unlinked crate `hex`
    |
    = help: you might be missing a crate named `hex`

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
